--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -25,9 +25,9 @@
   </p>
 </div>
 <div class='about-image'>
-  <img class="about-img" src="{% static 'images/about1.jpg' %}" alt="image" />
-  <img class="about-img" src="{% static 'images/about2.jpg' %}" alt="image" />
-  <img class="about-img" src="{% static 'images/about3.jpg' %}" alt="image" />
+  <img class="about-img" src="{% static 'images/about1.png' %}" alt="image" />
+  <img class="about-img" src="{% static 'images/about2.png' %}" alt="image" />
+  <img class="about-img" src="{% static 'images/about3.png' %}" alt="image" />
 </div>
 <hr id='about-hr' />
 <p id='landing-video-about'>The journal</p>
