--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -15,8 +15,8 @@
   <p id='dot-line'>♦───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────♦</p>
   <div class='about-section'>
     <div class='about-pics'>
-      <img id='second-pic' class="about-img slide-in" src="{% static 'images/landing4.jpg' %}" alt="image" />
-      <img id='first-pic' class="about-img slide-in" src="{% static 'images/landing7.jpg' %}" alt="image" />
+      <img id='second-pic' class="about-img slide-in" src="{% static 'images/landing4.png' %}" alt="image" />
+      <img id='first-pic' class="about-img slide-in" src="{% static 'images/landing7.png' %}" alt="image" />
     </div>
     <div class='about-link'>
       <p id='learn-more'>About <br> The Journal<p>
@@ -26,7 +26,7 @@
   <p id='dot-line'>♦───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────♦</p>
   <div class='articles-section'>
     <div class='articles-pics'>
-      <img id='article-pic2' class="articles-img slide-in" src="{% static 'images/landing3.jpg' %}" alt="image" />
+      <img id='article-pic2' class="articles-img slide-in" src="{% static 'images/landing3.png' %}" alt="image" />
     </div>
     <div class='articles-link'>
       <p id='learn-more'><span id='articles'> all </span> <br> Articles<p>
