--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -1,14 +1,3 @@
-/* @font-face {
-  font-family: 'Colgent';
-  src: url('../font/Colgent Regular.ttf') format('truetype');
-  font-family: 'FONTSPRING DEMO - The Seasons Light';
-  src: url('../font/Fontspring-DEMO-theseasons-lt.otf') format('truetype');
-  font-family: 'MADE TheArtist Script';
-  src: url('../font/MADE TheArtist Script PERSONAL USE.otf') format('truetype');
-  font-family: 'BDScript-Regular';
-  src: url('../font/FontsFree-Net-BeautifullyDelicious.ttf') format('truetype');
-} */
-
 @font-face {
   font-family: 'Colgent';
   src: url('../font/Colgent Regular.ttf') format('truetype');
@@ -406,4 +395,79 @@ p#landing-video-about {
   p#landing-video-about {
     margin-right: 80px;
   }
+}
+
+@media only screen 
+  and (min-device-width: 428px) 
+  and (max-device-width: 926px) 
+  and (-webkit-device-pixel-ratio: 3) {
+
+  body {
+    font-size: 16px;
+  }
+
+  header#main-header {
+    margin: 0 auto;
+  }
+  nav ul {
+    text-align: center;
+    margin: 0;
+  }
+
+  nav li {
+    margin: 5px 0;
+  }
+
+  nav a {
+    font-size: 15px;
+  }
+
+  img#user-icon {
+    width: 15px;
+    height: 18px;
+  }
+  
+  video#landingVideo {
+    width: 90%;
+  }
+
+  .about-heading h1 {
+    font-size: 50px;
+  }
+  
+  .about-heading p {
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
+  }
+  
+  .about-p {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .about-line {
+    overflow: hidden;
+    margin-left: 0;
+    padding-left: 0;
+    width: 90%;
+  }
+  
+  .about-img {
+    max-width: 28%;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+
+  p.page-content {
+    line-height: 20px;
+  }
+
+  p#journal {
+    margin-top: 0;
+    font-size: 30px;
+  }
+
 }
