--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -319,3 +319,94 @@ p#landing-video-landing {
   transition: transform 0.5s;
   opacity: 0;
 }
+
+@media only screen 
+  and (min-device-width: 428px) 
+  and (max-device-width: 926px) 
+  and (-webkit-device-pixel-ratio: 3) {
+
+    #landingVideo {
+      width: 100%;
+    }
+  
+    .landingVideo {
+      height: auto;
+      min-height: 20vh;
+    }
+  
+    p#landing-video-home {
+      font-size: 20px;
+      margin: 5px 20px;
+    }
+  
+    p#dot-line {
+      width: 400px;
+      font-size: 6px;
+      margin-top: 20px;
+      overflow: hidden;
+    }
+  
+    .about-section,
+    .articles-section {
+      margin-top: 30px;
+    }
+  
+    .about-section,
+    .articles-section {
+      max-height: 250px;
+    }
+  
+    .articles-section {
+      margin-left: 20px;
+    }
+  
+    .about-link,
+    .articles-link {
+      margin-right: 20px;
+  
+    }
+  
+    .about-pics img,
+    .articles-img img {
+      max-width: 100%;
+      max-height: 90%;
+    }
+  
+    p#learn-more {
+      font-size: 20px;
+    }
+  
+    .about-link a {
+      font-size: 15px;
+    }
+  
+    #articles {
+      font-size: 30px;
+    }
+  
+    .articles-link {
+      margin: 0 auto;
+    }
+  
+    .articles-pics {
+      max-width: 50%;
+    }
+  
+    #arrow {
+      width: 50px;
+      height: 10px;
+    }
+  
+    #article-pic2 {
+      max-width: 40vh;
+    }
+  
+    p#landing-video-landing {
+      font-size: 20px;
+      margin: 0 30px;
+    }
+  
+    #landing-hr1 {
+      margin-top: 30px;
+    }
+  }
