--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -29,6 +29,7 @@ body {
   height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 #root {
@@ -188,8 +189,9 @@ form.login {
 .about-line {
   display: flex;
   align-items: center;
-  height: 80px;
+  height: 105px;
   padding-left: 20px;
+  overflow: hidden;
 }
 
 .about-heading h1 {
@@ -237,8 +239,8 @@ p.page-content {
 }
 
 .about-img {
-  max-width: 25%;
-  height: 400px;
+  max-width: 100%;
+  height: 380px;
   margin-bottom: 40px;
   margin-right: 20px;
 }
@@ -471,3 +473,4 @@ p#landing-video-about {
   }
 
 }
+
