--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 40vh;
+  height: 45vh;
   overflow: hidden;
 }
 
@@ -93,16 +93,18 @@ p#learn-more {
 .about-pics img,
 .articles-img img {
   max-width: 100%;
-  height: 100%;
 }
 
+
 #first-pic {
+  width: 100%;
   padding-top: 25%;
   margin-right: 0;
   margin-bottom: 0;
 }
 
 img#second-pic {
+  width: 100%;
   margin-bottom: 20px;
 }
 
@@ -122,7 +124,7 @@ img#second-pic {
 }
 
 #article-pic2 {
-  max-width: 50vh;
+  max-width: 40vh;
 }
 
 p#landing-video-landing {
@@ -131,6 +133,7 @@ p#landing-video-landing {
   line-height: 1;
   text-align: right;
   margin: 0 50px;
+  overflow: hidden;
 }
 
 #landing-hr1 {
@@ -198,7 +201,7 @@ p#landing-video-landing {
   }
 
   #article-pic2 {
-    max-width: 60vh;
+    max-width: 25vh;
   }
 
   p#landing-video-landing {
@@ -214,7 +217,7 @@ p#landing-video-landing {
 
 @media (max-width: 414px) and (max-height: 896px) {
   #landingVideo {
-    width: 100%;
+    width: 90%;
   }
 
   .landingVideo {
@@ -228,7 +231,6 @@ p#landing-video-landing {
   }
 
   p#dot-line {
-    width: 400px;
     font-size: 6px;
     margin-top: 20px;
     overflow: hidden;
@@ -257,7 +259,6 @@ p#landing-video-landing {
   .about-pics img,
   .articles-img img {
     max-width: 100%;
-    max-height: 90%;
   }
 
   p#learn-more {
@@ -286,7 +287,7 @@ p#landing-video-landing {
   }
 
   #article-pic2 {
-    max-width: 40vh;
+    max-width: 50vh;
   }
 
   p#landing-video-landing {
@@ -326,7 +327,7 @@ p#landing-video-landing {
   and (-webkit-device-pixel-ratio: 3) {
 
     #landingVideo {
-      width: 100%;
+      width: 90%;
     }
   
     .landingVideo {
@@ -340,7 +341,6 @@ p#landing-video-landing {
     }
   
     p#dot-line {
-      width: 400px;
       font-size: 6px;
       margin-top: 20px;
       overflow: hidden;
@@ -369,7 +369,6 @@ p#landing-video-landing {
     .about-pics img,
     .articles-img img {
       max-width: 100%;
-      max-height: 90%;
     }
   
     p#learn-more {
@@ -398,7 +397,7 @@ p#landing-video-landing {
     }
   
     #article-pic2 {
-      max-width: 40vh;
+      max-width: 25vh;
     }
   
     p#landing-video-landing {
@@ -410,3 +409,17 @@ p#landing-video-landing {
       margin-top: 30px;
     }
   }
+
+/* @media only screen 
+and (device-width: 768px) 
+and (device-height: 1024px) 
+and (-webkit-device-pixel-ratio: 1) {
+
+  img#first-pic.about-img {
+    max-width: 5vh;
+  }
+  
+  img#second-pic.about-img {
+    max-width: 5vh;
+  }
+} */
